fix(EIDOMNI-642): fix issuance for issuers without batch support