@@ -1,19 +1,20 @@
 package ch.admin.bj.swiyu.issuer.oid4vci.intrastructure.web.controller;
 
 import ch.admin.bj.swiyu.issuer.PostgreSQLContainerInitializer;
-import ch.admin.bj.swiyu.issuer.dto.credentialoffer.CreateCredentialOfferRequestDto;
-import ch.admin.bj.swiyu.issuer.dto.credentialoffer.CredentialOfferDto;
-import ch.admin.bj.swiyu.issuer.dto.credentialoffer.CredentialOfferMetadataDto;
-import ch.admin.bj.swiyu.issuer.dto.credentialoffer.CredentialWithDeeplinkResponseDto;
-import ch.admin.bj.swiyu.issuer.dto.oid4vci.DeferredDataDto;
 import ch.admin.bj.swiyu.issuer.common.config.ApplicationProperties;
 import ch.admin.bj.swiyu.issuer.common.config.SdjwtProperties;
 import ch.admin.bj.swiyu.issuer.domain.credentialoffer.*;
 import ch.admin.bj.swiyu.issuer.domain.openid.credentialrequest.holderbinding.AttackPotentialResistance;
 import ch.admin.bj.swiyu.issuer.domain.openid.credentialrequest.holderbinding.ProofType;
+import ch.admin.bj.swiyu.issuer.domain.openid.metadata.BatchCredentialIssuance;
+import ch.admin.bj.swiyu.issuer.domain.openid.metadata.IssuerMetadata;
+import ch.admin.bj.swiyu.issuer.dto.credentialoffer.CreateCredentialOfferRequestDto;
+import ch.admin.bj.swiyu.issuer.dto.credentialoffer.CredentialOfferMetadataDto;
+import ch.admin.bj.swiyu.issuer.dto.credentialoffer.CredentialWithDeeplinkResponseDto;
+import ch.admin.bj.swiyu.issuer.dto.oid4vci.DeferredDataDto;
 import ch.admin.bj.swiyu.issuer.oid4vci.test.TestInfrastructureUtils;
-import ch.admin.bj.swiyu.issuer.service.test.TestServiceUtils;
 import ch.admin.bj.swiyu.issuer.service.did.DidKeyResolverFacade;
+import ch.admin.bj.swiyu.issuer.service.test.TestServiceUtils;
 import ch.admin.bj.swiyu.issuer.service.webhook.AsyncCredentialEventHandler;
 import ch.admin.bj.swiyu.issuer.service.webhook.DeferredEvent;
 import ch.admin.bj.swiyu.issuer.service.webhook.OfferStateChangeEvent;
@@ -38,6 +39,7 @@ import org.springframework.http.MediaType;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
+import org.springframework.test.context.bean.override.mockito.MockitoSpyBean;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.ResultActions;
 import org.springframework.transaction.TransactionStatus;
@@ -46,8 +48,6 @@ import org.springframework.transaction.support.TransactionCallbackWithoutResult;
 import org.springframework.transaction.support.TransactionTemplate;
 import org.testcontainers.junit.jupiter.Testcontainers;
 
-import java.net.URLDecoder;
-import java.nio.charset.StandardCharsets;
 import java.time.Clock;
 import java.time.Instant;
 import java.time.ZoneId;
@@ -55,12 +55,11 @@ import java.time.temporal.ChronoUnit;
 import java.util.*;
 
 import static ch.admin.bj.swiyu.issuer.oid4vci.test.CredentialOfferTestData.*;
-import static ch.admin.bj.swiyu.issuer.oid4vci.test.TestInfrastructureUtils.requestCredential;
+import static ch.admin.bj.swiyu.issuer.oid4vci.test.TestInfrastructureUtils.*;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.mockStatic;
-import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
@@ -75,7 +74,6 @@ class DeferredFlowIT {
     private static ECKey jwk;
     private final UUID deferredPreAuthCode = UUID.randomUUID();
     private final UUID notDeferredPreAuthCode = UUID.randomUUID();
-    private final UUID validUnboundPreAuthCode = UUID.randomUUID();
     private final Instant validFrom = Instant.now();
     private final Instant validUntil = Instant.now().plus(30, ChronoUnit.DAYS);
     private final String deferredCredentialEndpoint = "/oid4vci/api/deferred_credential";
@@ -84,6 +82,8 @@ class DeferredFlowIT {
     DidKeyResolverFacade didKeyResolver;
     @MockitoBean
     AsyncCredentialEventHandler testEventListener;
+    @MockitoSpyBean
+    private IssuerMetadata issuerMetadata;
     @Autowired
     private MockMvc mock;
     @Autowired
@@ -103,8 +103,6 @@ class DeferredFlowIT {
     private Map<String, String> offerData;
     private CredentialOffer deferredOffer;
     private UUID deferredOfferId;
-    private CredentialOffer validUnboundOffer;
-    private UUID validUnboundOfferId;
     private UUID notDeferredOfferId;
     private StatusList statusList;
     private CredentialManagement credentialManagement;
@@ -113,12 +111,9 @@ class DeferredFlowIT {
     void setUp() throws JOSEException {
         statusList = saveStatusList(createStatusList());
         deferredOfferId = UUID.randomUUID();
-        validUnboundOfferId = UUID.randomUUID();
         notDeferredOfferId = UUID.randomUUID();
         deferredOffer = createTestOffer(deferredPreAuthCode, CredentialOfferStatusType.OFFERED, "university_example_sd_jwt", validFrom, validUntil, getCredentialMetadata(true));
         saveStatusListLinkedOffer(deferredOffer, statusList, 0, deferredOfferId);
-        validUnboundOffer = createTestOffer(validUnboundPreAuthCode, CredentialOfferStatusType.OFFERED, "unbound_example_sd_jwt", validFrom, validUntil, getCredentialMetadata(true), null, null);
-        saveStatusListLinkedOffer(validUnboundOffer, statusList, 1, validUnboundOfferId);
         var notDeferredOffer = createTestOffer(notDeferredPreAuthCode, CredentialOfferStatusType.OFFERED, "university_example_sd_jwt", validFrom, validUntil, getCredentialMetadata(false));
         saveStatusListLinkedOffer(notDeferredOffer, statusList, 2, notDeferredOfferId);
 
@@ -140,33 +135,14 @@ class DeferredFlowIT {
                 .credentialMetadata(getCredentialMetadataDto())
                 .build();
 
-        var offerRequestString = objectMapper.writeValueAsString(offerRequest);
-
         // create initial credential offer
-        var response = mock.perform(post("/management/api/credentials")
-                        .contentType(MediaType.APPLICATION_JSON_VALUE)
-                        .content(offerRequestString))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.management_id").isNotEmpty())
-                .andExpect(jsonPath("$.offer_deeplink").isNotEmpty())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON_VALUE))
-                .andReturn();
+        var credentialWithDeeplinkResponseDto = createInitialCredentialWithDeeplinkResponse(mock, offerRequest);
 
-        var credentialWithDeeplinkResponseDto = objectMapper.readValue(response.getResponse().getContentAsString(), CredentialWithDeeplinkResponseDto.class);
+        var credentialOffer = extractCredentialOfferDtoFromCredentialWithDeeplinkResponseDto(credentialWithDeeplinkResponseDto);
 
-        var credentialOffer = extractCredentialOfferFromResponse(credentialWithDeeplinkResponseDto);
-
-        // get token
-        var tokenResponse = mock.perform(post("/oid4vci/api/token")
-                        .contentType(MediaType.APPLICATION_FORM_URLENCODED)
-                        .param("grant_type", "urn:ietf:params:oauth:grant-type:pre-authorized_code")
-                        .param("pre-authorized_code", credentialOffer.getGrants().preAuthorizedCode().preAuthCode().toString()))
-                .andExpect(status().isOk())
-                .andReturn();
+        var tokenDto = fetchOAuthToken(mock, credentialOffer.getGrants().preAuthorizedCode().preAuthCode().toString());
 
         verify(testEventListener, Mockito.times(1)).handleOfferStateChangeEvent(any(OfferStateChangeEvent.class));
-
-        var tokenDto = objectMapper.readValue(tokenResponse.getResponse().getContentAsString(), Map.class);
 
         String proof = TestServiceUtils.createHolderProof(jwk, applicationProperties.getTemplateReplacement().get("external-url"), (String) tokenDto.get("c_nonce"), ProofType.JWT.getClaimTyp(), false);
 
@@ -192,13 +168,7 @@ class DeferredFlowIT {
                 .andExpect(jsonPath("$.credential_offers[0].key_attestations").doesNotExist())
                 .andReturn();
 
-        mock.perform(patch("/management/api/credentials/" + credentialWithDeeplinkResponseDto.getManagementId())
-                        .contentType(MediaType.APPLICATION_JSON_VALUE)
-                        .content(objectMapper.writeValueAsString(offerData)))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id").isNotEmpty())
-                .andExpect(jsonPath("$.status").value("READY"))
-                .andReturn();
+        markAsReady(credentialWithDeeplinkResponseDto);
 
         // check status from business issuer perspective
         mock.perform(get("/management/api/credentials/" + credentialWithDeeplinkResponseDto.getManagementId() + "/status"))
@@ -224,6 +194,86 @@ class DeferredFlowIT {
     }
 
     @Test
+    void testCompleteFlow_batched_thenSuccess() throws Exception {
+
+        doReturn(new BatchCredentialIssuance(10)).when(issuerMetadata).getBatchCredentialIssuance();
+        doReturn(true).when(issuerMetadata).isBatchIssuanceAllowed();
+
+        var offerRequest = CreateCredentialOfferRequestDto.builder()
+                .metadataCredentialSupportedId(List.of("test"))
+                .credentialSubjectData(Map.of("lastName", "lastName"))
+                .credentialMetadata(getCredentialMetadataDto())
+                .build();
+
+        // create initial credential offer
+        var credentialWithDeeplinkResponseDto = createInitialCredentialWithDeeplinkResponse(mock, offerRequest);
+
+        var credentialOffer = extractCredentialOfferDtoFromCredentialWithDeeplinkResponseDto(credentialWithDeeplinkResponseDto);
+
+        var tokenDto = fetchOAuthToken(mock, credentialOffer.getGrants().preAuthorizedCode().preAuthCode().toString());
+
+        String proof = TestServiceUtils.createHolderProof(jwk, applicationProperties.getTemplateReplacement().get("external-url"), (String) tokenDto.get("c_nonce"), ProofType.JWT.getClaimTyp(), false);
+
+        var deferredCredentialResponse = requestCredential(mock, (String) tokenDto.get("access_token"), getCredentialRequestString(proof))
+                .andExpect(status().isAccepted())
+                .andReturn();
+        verify(testEventListener, Mockito.times(1)).handleDeferredEvent(any(DeferredEvent.class));
+
+        DeferredDataDto deferredDataDto = objectMapper.readValue(deferredCredentialResponse.getResponse().getContentAsString(), DeferredDataDto.class);
+
+        String deferredCredentialRequestString = getDeferredCredentialRequestString(deferredDataDto.transactionId().toString());
+
+        markAsReady(credentialWithDeeplinkResponseDto);
+
+        mock.perform(post(deferredCredentialEndpoint)
+                        .header("Authorization", String.format("BEARER %s", tokenDto.get("access_token")))
+                        .contentType("application/json")
+                        .content(deferredCredentialRequestString))
+                .andExpect(status().isOk())
+                .andReturn();
+    }
+
+    @Test
+    void testCompleteFlow_notBatched_thenSuccess() throws Exception {
+
+        doReturn(null).when(issuerMetadata).getBatchCredentialIssuance();
+        doReturn(false).when(issuerMetadata).isBatchIssuanceAllowed();
+
+        var offerRequest = CreateCredentialOfferRequestDto.builder()
+                .metadataCredentialSupportedId(List.of("test"))
+                .credentialSubjectData(Map.of("lastName", "lastName"))
+                .credentialMetadata(getCredentialMetadataDto())
+                .build();
+
+        // create initial credential offer
+        var credentialWithDeeplinkResponseDto = createInitialCredentialWithDeeplinkResponse(mock, offerRequest);
+
+        var credentialOffer = extractCredentialOfferDtoFromCredentialWithDeeplinkResponseDto(credentialWithDeeplinkResponseDto);
+
+        var tokenDto = fetchOAuthToken(mock, credentialOffer.getGrants().preAuthorizedCode().preAuthCode().toString());
+
+        String proof = TestServiceUtils.createHolderProof(jwk, applicationProperties.getTemplateReplacement().get("external-url"), (String) tokenDto.get("c_nonce"), ProofType.JWT.getClaimTyp(), false);
+
+        var deferredCredentialResponse = requestCredential(mock, (String) tokenDto.get("access_token"), getCredentialRequestString(proof))
+                .andExpect(status().isAccepted())
+                .andReturn();
+        verify(testEventListener, Mockito.times(1)).handleDeferredEvent(any(DeferredEvent.class));
+
+        DeferredDataDto deferredDataDto = objectMapper.readValue(deferredCredentialResponse.getResponse().getContentAsString(), DeferredDataDto.class);
+
+        String deferredCredentialRequestString = getDeferredCredentialRequestString(deferredDataDto.transactionId().toString());
+
+        markAsReady(credentialWithDeeplinkResponseDto);
+
+        mock.perform(post(deferredCredentialEndpoint)
+                        .header("Authorization", String.format("BEARER %s", tokenDto.get("access_token")))
+                        .contentType("application/json")
+                        .content(deferredCredentialRequestString))
+                .andExpect(status().isOk())
+                .andReturn();
+    }
+
+    @Test
     void testCompleteFlow_withKeyAttestation_thenSuccess() throws Exception {
 
         var offerRequest = CreateCredentialOfferRequestDto.builder()
@@ -246,7 +296,7 @@ class DeferredFlowIT {
 
         var credentialWithDeeplinkResponseDto = objectMapper.readValue(response.getResponse().getContentAsString(), CredentialWithDeeplinkResponseDto.class);
 
-        var credentialOffer = extractCredentialOfferFromResponse(credentialWithDeeplinkResponseDto);
+        var credentialOffer = extractCredentialOfferDtoFromCredentialWithDeeplinkResponseDto(credentialWithDeeplinkResponseDto);
 
         Mockito.when(didKeyResolver.resolveKey(Mockito.any())).thenReturn(jwk.toPublicJWK());
 
@@ -289,13 +339,7 @@ class DeferredFlowIT {
                 .andExpect(jsonPath("$.credential_offers[0].key_attestations").value(SignedJWT.parse(proof).getHeader().getCustomParam("key_attestation").toString()))
                 .andReturn();
 
-        mock.perform(patch("/management/api/credentials/" + credentialWithDeeplinkResponseDto.getManagementId())
-                        .contentType(MediaType.APPLICATION_JSON_VALUE)
-                        .content(objectMapper.writeValueAsString(offerData)))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id").isNotEmpty())
-                .andExpect(jsonPath("$.status").value("READY"))
-                .andReturn();
+        markAsReady(credentialWithDeeplinkResponseDto);
 
         // check status from business issuer perspective
         mock.perform(get("/management/api/credentials/" + credentialWithDeeplinkResponseDto.getManagementId() + "/status"))
@@ -554,9 +598,13 @@ class DeferredFlowIT {
     }
 
     @Test
-    void testDeferredOffer_withoutProof_thenSuccess() throws Exception {
+    void testDeferredOffer_noBatch_withoutProof_thenSuccess() throws Exception {
 
-        var tokenResponse = TestInfrastructureUtils.fetchOAuthToken(mock, validUnboundPreAuthCode.toString());
+        doReturn(null).when(issuerMetadata).getBatchCredentialIssuance();
+        doReturn(false).when(issuerMetadata).isBatchIssuanceAllowed();
+
+        var unboundOffer = createUnboundCredentialOffer();
+        var tokenResponse = TestInfrastructureUtils.fetchOAuthToken(mock, unboundOffer.getPreAuthorizedCode().toString());
         var token = tokenResponse.get("access_token");
         var credentialRequestString = " { \"format\": \"vc+sd-jwt\"}";
 
@@ -570,7 +618,40 @@ class DeferredFlowIT {
         DeferredDataDto deferredDataDto = objectMapper.readValue(deferredCredentialResponse.getResponse().getContentAsString(), DeferredDataDto.class);
 
         // check status from business issuer perspective
-        mock.perform(patch("/management/api/credentials/%s/status?credentialStatus=%s".formatted(validUnboundOfferId, CredentialOfferStatusType.READY.name())))
+        mock.perform(patch("/management/api/credentials/%s/status?credentialStatus=%s".formatted(unboundOffer.getCredentialManagement().getId(), CredentialOfferStatusType.READY.name())))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.status").value("READY"))
+                .andReturn();
+
+        String deferredCredentialRequestString = getDeferredCredentialRequestString(deferredDataDto.transactionId().toString());
+
+        mock.perform(post(deferredCredentialEndpoint)
+                        .header("Authorization", String.format("BEARER %s", token))
+                        .contentType("application/json")
+                        .content(deferredCredentialRequestString))
+                .andExpect(status().isOk())
+                .andReturn();
+    }
+
+    @Test
+    void testDeferredOffer_batched_withoutProof_thenSuccess() throws Exception {
+
+        var unboundOffer = createUnboundCredentialOffer();
+        var tokenResponse = TestInfrastructureUtils.fetchOAuthToken(mock, unboundOffer.getPreAuthorizedCode().toString());
+        var token = tokenResponse.get("access_token");
+        var credentialRequestString = " { \"format\": \"vc+sd-jwt\"}";
+
+        var deferredCredentialResponse = requestCredential(mock, (String) token, credentialRequestString)
+                .andExpect(status().isAccepted())
+                .andExpect(content().contentType("application/json"))
+                .andExpect(jsonPath("$.credentials").doesNotExist())
+                .andExpect(jsonPath("$.transaction_id").isNotEmpty())
+                .andReturn();
+
+        DeferredDataDto deferredDataDto = objectMapper.readValue(deferredCredentialResponse.getResponse().getContentAsString(), DeferredDataDto.class);
+
+        // check status from business issuer perspective
+        mock.perform(patch("/management/api/credentials/%s/status?credentialStatus=%s".formatted(unboundOffer.getCredentialManagement().getId(), CredentialOfferStatusType.READY.name())))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.status").value("READY"))
                 .andReturn();
@@ -691,15 +772,6 @@ class DeferredFlowIT {
         });
     }
 
-    private CredentialOfferDto extractCredentialOfferFromResponse(CredentialWithDeeplinkResponseDto dto) throws Exception {
-
-        var decodedDeeplink = URLDecoder.decode(dto.getOfferDeeplink(), StandardCharsets.UTF_8);
-
-        var credentialOfferString = decodedDeeplink.replace("swiyu://?credential_offer=", "");
-
-        return objectMapper.readValue(credentialOfferString, CredentialOfferDto.class);
-    }
-
     private Map<String, String> getTestOfferData() {
         Map<String, String> testOfferData = new HashMap<>();
         testOfferData.put("lastName", "lastName");
@@ -729,5 +801,29 @@ class DeferredFlowIT {
 
     private CredentialOfferMetadataDto getCredentialMetadataDto() {
         return new CredentialOfferMetadataDto(true, "sha256-SVHLfKfcZcBrw+d9EL/1EXxvGCdkQ7tMGvZmd0ysMck=", null, null);
+    }
+
+    private CredentialOffer createUnboundCredentialOffer() throws Exception {
+        var offerMetadata = new CredentialOfferMetadataDto(true, "sha256-SVHLfKfcZcBrw+d9EL/1EXxvGCdkQ7tMGvZmd0ysMck=", null, null);
+        var offerRequest = CreateCredentialOfferRequestDto.builder()
+                .metadataCredentialSupportedId(List.of("unbound_example_sd_jwt"))
+                .credentialSubjectData(Map.of("animal", "animal"))
+                .credentialMetadata(offerMetadata)
+                .statusLists(List.of(statusList.getUri()))
+                .build();
+
+        var offer = createInitialCredentialWithDeeplinkResponse(mock, offerRequest);
+
+        return credentialOfferRepository.findById(offer.getOfferId()).orElseThrow();
+    }
+
+    private void markAsReady(CredentialWithDeeplinkResponseDto credentialWithDeeplinkResponseDto) throws Exception {
+        mock.perform(patch("/management/api/credentials/" + credentialWithDeeplinkResponseDto.getManagementId())
+                        .contentType(MediaType.APPLICATION_JSON_VALUE)
+                        .content(objectMapper.writeValueAsString(offerData)))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.id").isNotEmpty())
+                .andExpect(jsonPath("$.status").value("READY"))
+                .andReturn();
     }
 }
